@@ -1,3 +1,12 @@
+2008-07-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Turn off bytecode compilation during native build.
+	* src/gnu/ldml/Parser.java:
+	Record data in metazone element.
+	* src/gnu/localegen/PropertiesGenerator.java:
+	Incorporate metazone data as well in timezone translations.
+
 2008-06-29  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	PR classpath/22851:
